--- a/about.html
+++ b/about.html
@@ -15,16 +15,27 @@ header-img: "img/about1-bg.jpg"
 <div class="zh post-container">
     <blockquote>
         初次见面，请多关照，上面那个头发很乱的是我，天生自然卷，去理发店柔顺拉直也只能扛几天。
-        半路转行web，本来是跟在老师后面做机器人相关，但去年暑假在常州这边软件园待了一个月后，
+        半路转行web，本来是跟在李老师后面做机器人相关，但去年暑假在常州这边软件园待了一个月后，
         对web产生了极大的兴趣，原来带我的老师出国留学了，独自跌跌撞撞的开始自学
         ，第一次知道原来网页只需要个记事本写几个标签就可以在浏览器看见效果，第一次自己玩自己写的小游戏，第一次
         和数据库交互...这些带给我的成就感远远超过我之前瞪大眼睛焊电路板，网上四处搜罗各种论文学习相关机器人模型，运动学，封装好的定位，视觉算法包应用
         ，焊的电路板还是学长画的...
         刚开始的时候学的是.net配合C#，去年九月份又学了点php,当时想做一点微信公众号开发，后来做到回复图文消息又弃坑了，又赶上申请大创突击了两周安卓，感到兴趣索然
         ，做完之后又弃坑，最后老老实实的开始学js,边做百度IFE上的练习边学。每次看到高分答案提交的代码，差距确实太大了，周围也找不到可以交流的小伙伴
-        ，认识的学长全是偏硬件或者擅长c++或java刷题，想想当初dom操作选取class不知返回的是伪数组绑定不了事件郁闷了一下午，再向后给class循环绑定事件传ig
+        ，认识的学长全是嵌入式或者擅长c++或java刷题，想想当初dom操作选取class不知返回的是伪数组绑定不了事件郁闷了一下午，再向后给class循环绑定事件传ig
         传i过去不知用闭包...甚至刚开始用github一直用桌面版客户端,走了很多弯路，太渴望在身边可以有互相交流的人了。
 
+        大学生活于我而言快要结束了，说实话只认认真真的学过两门课，一门是教vb.net的严老师，上第一节课就觉得严老师和其他教课的老师不一样，只有他强调代码规范，
+        常量大写，变量驼峰式命名等等，并把MVC思想引入教学中。依稀记得大二下学期结束的前一天上午，严老师给了我课设五个绩点并问我愿不愿意去企业里看看，
+        这一个机会颠覆了我原本暑假留校继续在实验室搞机器人的安排。原来带我李老师忙着准备去澳洲，也接触不到业界相关学习资源，学习也没有方向。在公司里学到了很多，
+        当时是先强化了一周sql,然后开始.net加C#，下午四点还有一个大四刚毕业的学姐教我日语。到现在很多东西不用都不敢说之前学过，现在后台也就会点javal ,
+        .net出了公司后再没用过，日语也算是入了门，不过现在也就N5的水平...再回首看，每一个站在三岔路口风云千樯的日子，在当时都以为很普通的一天。另一门课是
+        计算机组成原理，这门课是韩老师任教，韩老师和高中老师一样苦口婆心，每天上课耳提面命希望唤醒那些整体宿舍打游戏的同学，我真心感到很幸运遇到关心学生
+        的老师，然而课后更多的听到的是同学背地里的咒骂，因为她上课管的太严了。其余的课程内容都是自学，无所谓的课程诸如毛概之流考前突击一下，及格便心满意足。
+
+        白驹过隙，恍然大三也过了一半，想起大一刚入学的时候国庆节刚学C给每个人发了一条printf祝福真的好幼稚，后来大二加入到实验室接触到一批优秀的学长，秋白楼每个阴风呼啸窗户的夜晚
+        ，寒假菜鸟驿站楼上宿舍漏水的日子，装3D环境装到绝望的时刻，在苏科大实验室打地铺的夏夜，每一个时段都是我宝贵的人生。絮絮叨叨自我介绍扯了那么多，
+        真的是菜鸡互啄(逃
 
 
     </blockquote>
@@ -42,13 +53,6 @@ header-img: "img/about1-bg.jpg"
     </blockquote>
 
     <p>
-         (｡･∀･)ﾉﾞ嗨，我是林润泽，大三本科在读，2016年9月开通本站。
-        大二那年暑假，有幸去学校的对日外包公司待了一个月，这一个月逆转了我的人生。
-        那个闷热的暑假，学校搬迁，留校人员移居另一校区，对面正好就是常州新北软件园，
-    本来是在实验室里跟着李老师做机器人方面的项目，但搬迁实验室也没了，带我的老师忙着出国留学，更多的时候都是自己在宿舍里瞎学，
-    在此，非常感谢严老师推荐我去学校的外包公司，这个机会对我的人生影响太大了。以前对网页什么的只是听说过，对于脚本语言之类更是一头雾水，
-    在学校里更是接触不到web相关的平台。现在回头想一想，当时带我的员工明显也是业余的前端，其实是做C#开发的。因为我当时问他为什么我dom选取class无效他也网上搜了好半天
-   。
     </p>
 
 
