hotfix: replace bg

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "关于我"
-header-img: "img/about1-bg.jpg"
+header-img: "img/17-3-26.jpg"
 ---
 
 <!-- Language Selector -->
